Fix issue with InfoMarquee component causing horizontal overflow
The calculation I was using to set the width of numerous components was including the vertical scrollbar's width. As a result, any time a component overflowed, other components who weren't inheriting their width directly from the page element were also overflowing by the width of the vertical scrollbar gutter.

--- a/packages/frontend/src/features/CategoryProductList/index.module.css
+++ b/packages/frontend/src/features/CategoryProductList/index.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
 
-    width: min(calc(var(--vw) * 100), 100%);
+    width: min(calc(var(--vw) * 100), calc(100vw - (100vw - 100%)));
 }
 
 .category-product-list-width-controller {
