--- a/packages/frontend/src/pages/Home/index.module.css
+++ b/packages/frontend/src/pages/Home/index.module.css
@@ -1,3 +1,3 @@
 .page {
-    max-width: min(calc(var(--vw) * 100), 100%);
+    width: min(var(--body-width), 100%);
 }
